[package]
name = "lighthouse"
version = "2.0.0"
authors = ["sirhercules <sirhercules27@yahoo.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/optimizer:0.15.0
"""

[dependencies]
cosmwasm-schema = "1.5.0"
cosmwasm-std = "1.3.1"
cw-storage-plus = "1.2.0"
cw-ownable      = "0.5.0"
cw2 = "1.1.1"
schemars = "0.8.15"
serde = { version = "1.0.189", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.49" }
cw2981-royalties = { version = "0.17.0", features = ["library"] }
sha3 = "0.10.8"
data-encoding = "=2.5.0"
cw-utils = "1.0.1"
bech32 = "0.8.0"

[dev-dependencies]
cw-multi-test = "0.17.0"

